fix about page background not centered

--- a/www/less/main/pages/about.less
+++ b/www/less/main/pages/about.less
@@ -21,7 +21,7 @@
 			opacity: 1;
 		}
 	}
-	
+
 	.content {
 		// margin-top: -@header-height;
 		.hero {
@@ -84,9 +84,7 @@
 			.hero-bg {
 				width: 100%;
 				overflow: hidden;
-				img {
-					// height: 400px;
-				}
+				text-align: center;
 			}
 		}
 
